# printfiles

./: ABSTRACTION.md  AGENTS.md  CONTEXT.md  README.md  TODO.md  format.sh  lint.sh  prin.code-workspace  print_repo.py  printfiles.code-workspace  pyproject.toml  test.sh  tmp_debug.py
.cursor/rules/: project-rules.mdc
printfiles/: pyproject.toml
printfiles/src/printfiles/: __init__.py  cli_common.py  core.py  formatters.py  print_files.py  print_repo.py
printfiles/src/printfiles/adapters/: github.py
printfiles/tests/: test_cli_engine_tmp_path.py  test_print_repo_positional.py
src/prin/: __init__.py  cli_common.py  core.py  defaults.py  filters.py  formatters.py  prin.py  print_files.py  print_repo.py  types.py  util.py
src/prin/adapters/: filesystem.py  github.py
src/printfiles/: cli_common.py  prin.py  print_files.py  print_repo.py
src/printfiles/adapters/: filesystem.py  github.py
tests/: conftest.py  test_cli_engine_positional.py  test_cli_engine_tmp_path.py  test_extensionless_files.py  test_max_files_fs.py  test_max_files_repo.py  test_print_mixed_fs_repo.py  test_print_repo_positional.py  utils.py
