[project]
name = "prin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cursor Agent", email = "cursoragent@cursor.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
prin = "prin.prin:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
