[project]
name = "printfiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cursor Agent", email = "cursoragent@cursor.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
printfiles = "printfiles.print_files:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
